--- a/coffee-site-new/package.json
+++ b/coffee-site-new/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
